# zor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  run_tests.sh  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  python-package.yml
docs/: commands.md  guide.md  index.md
nebula/: config.py  history.py  main.py
open_code/: api.py  config.py  context.py  file_ops.py  git_utils.py  history.py  main.py
tests/: confest.py  conftest.py  test_api.py  test_config.py  test_context.py  test_file_ops.py  test_git_utils.py  test_history.py  test_init_function.py  test_main.py  test_safety.py
zor/: ascii.txt  context.py  git_utils.py  main.py  main.py.bak
