[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open_code"
version = "0.1.2"
description = "An Open-Source Claude Code like tool"
authors = [{ name = "Hemanth", email = "arjunbanur27@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "google-generativeai",
    "python-dotenv",
    "typer",
    "rich",
    "pygments"
]

[project.scripts]
admino = "open_code.main:app"


