[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zor"
version = "0.0.3"
description = "An Open-Source Claude Code like tool"
authors = [{ name = "Hemanth", email = "arjunbanur27@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "google-generativeai",
    "python-dotenv",
    "typer",
    "rich",
    "pygments"
]

[project.scripts]
zor = "zor.main:app"
